--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
-.display-size {
-  width: 100%;
-  height: 350px;
+.hero__bg {
+  background-image: url("./assets/bg-hero.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.banner__spacing {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
